[metadata]
name = playground-unimport
version = attr: playground_unimport.__version__
url = https://playground-unimport.hakancelik.dev/
author = Hakan Çelik
author_email = contact@hakancelik.dev
description = attr: playground_unimport.__description__
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0
keywords = 
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://playground-unimport.hakancelik.dev/
    Issues = https://github.com/hakancelikdev/playground-unimport/issues/
    Changelog = https://playground-unimport.hakancelik.dev/changelog

[options]
python_requires = >=3.10
include_package_data = true
zip_safe = true
packages =
    playground_unimport
package_dir =
    =src
install_requires =
    unimport
    panel==0.14.0
